--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "url": "https://github.com/Toxin95/pocket-scraper",
   "dependencies": {
     "axios": "^1.8.4",
     "cheerio": "^1.0.0"
