--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "pocket-scraper",
-  "version": "1.0.2",
-  "main": "scraper.js",
+  "version": "1.1.0",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node scraper.js",
-    "postinstall": "node scraper.js"
+    "test": "jest",
+    "start": "node index.js",
+    "postinstall": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,20 @@
     "cheerio": "^1.0.0"
   },
   "files": [
-    "scraper.js",
+    "utility/scraper.js",
+    "utility/utility.ts",
+    "types/types.ts",
     "cards.json"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/parser": "^7.27.0",
+    "@babel/types": "^7.27.0",
+    "@types/jest": "^29.5.14",
+    "expect": "^29.7.0",
+    "jest": "^29.7.0",
+    "pretty-format": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
+    "undici": "^6.21.2"
+  }
 }
