--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "pocket-scraper",
   "version": "1.1.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "jest",
-    "start": "node index.js",
-    "postinstall": "node index.js"
+    "start": "node dist/index.js",
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +19,7 @@
     "cheerio": "^1.0.0"
   },
   "files": [
-    "utility/scraper.js",
-    "utility/utility.ts",
-    "types/types.ts",
-    "cards.json"
+    "dist"
   ],
   "devDependencies": {
     "@babel/parser": "^7.27.0",
@@ -32,6 +30,6 @@
     "pretty-format": "^29.7.0",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
-    "undici": "^6.21.2"
+    "typescript": "^5.2.2"
   }
 }
