--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "pocket-scraper",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run create:cards",
     "test": "jest",
     "start": "node dist/index.js",
+    "create:cards": "echo [] > dist/cards.json",
     "postinstall": "npm run build"
   },
   "keywords": [],
